# its-agents-system

./: .env.example  .gitignore  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
agents/: base.py
agents/monitoring/: agent.py  alerting.py  checks.py
api/: main.py
api/routes/: health.py
clients/: example_client.yml
common/: config.py  db.py  llm.py  odoo_client.py
docs/dev/: GEMINI_TECH_DEFS.md  OPERATIONS_DEFINITION.md  _GUIDE_AUDIT.md  _ITS_RACI_MATRIX.md  _PRE_AUDIT.md  __Audit_File.md
docs/dev/artifacts/: Analyse_Projet_its.md  Master_Task.md  Phase1_Foundation.md  Phase2_Integration.md  Phase3_Integration.md  Synthese_Projet_its.md
infrastructure/: init.sql
tests/integration/: test_monitoring.py
tests/unit/: test_llm.py  test_odoo_client.py
